--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -2,3 +2,4 @@ sdk.dir=C:\\Users\\chakravarthy\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\development\\flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
+flutter.buildMode=debug
